# webgpu-learning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/levels/city/: city.gltf
assets/levels/house/: house.gltf
assets/models/: tile.gltf  yae.gltf
cmake/: TargetAddExtraWarnings.cmake
minimal_example/: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  CSM.cpp  CSM.h  FreeCameraController.cpp  Game.cpp  Game.h  MeshCache.cpp  MeshCache.h  OSUtil.cpp  Shaders.h  main.cpp
src/Graphics/: GPUMesh.h  Material.h  Mesh.cpp  Mesh.h  MipMapGenerator.cpp  MipMapGenerator.h  Model.h  Scene.h  ShadowMapping.cpp  SkeletalAnimation.h  Skeleton.cpp  Skeleton.h  SkeletonAnimator.cpp  SkeletonAnimator.h  Texture.cpp  Texture.h  Util.cpp  Util.h
src/util/: GltfLoader.cpp  GltfLoader.h  ImageLoader.cpp  ImageLoader.h  InputUtil.cpp  OSUtil.cpp  OSUtil.h  SDLWebGPU.cpp  SDLWebGPU.h  WebGPUUtil.cpp  WebGPUUtil.h
tools/: init_submodules.sh
